# maestro

./: Dockerfile  PROTOCOLO.md  README.md  projetos.yaml  pyproject.toml
maestro/: acesso.py  auditor.py  cerebro.py  config.py  loop.py  main.py  playbook.py  registro.py  sentinela.py  telegram_api.py  voz.py
maestro/adaptadores/: captura.py  conhecimento.py
tests/: test_acesso.py  test_adaptador_captura.py  test_adaptador_conhecimento.py  test_auditor.py  test_cerebro.py  test_loop.py  test_playbook.py  test_reconcile_routine.py  test_registro.py  test_sentinela.py  test_voz.py
