[project]
name = "maestro"
version = "0.1.0"
description = "Coordenador universal de sistemas e agentes"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "httpx>=0.28.0",
    "anthropic>=0.116.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
